--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,12 @@
   <meta charset="utf-8">
   <meta name="viewport"
     content="width=device-width, initial-scale=1, maximum-scale=1.0, shrink-to-fit=no, user-scalable=no">
-  <meta name="theme-color" content="#000000">
+  <!-- Chrome, Firefox OS and Opera -->
+  <meta name="theme-color" content="#6465A5">
+  <!-- Windows Phone -->
+  <meta name="msapplication-navbutton-color" content="#6465A5">
+  <!-- iOS Safari -->
+  <meta name="apple-mobile-web-app-status-bar-style" content="#6465A5">
   <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
